--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,7 @@ nav ul li a {
     text-decoration: none;
     font-size: 18px;
     color: #828282;
+    color: #575757;
     padding-left: 80px;
 }
 header h2 {
@@ -60,6 +61,7 @@ header h2 {
     font-size: 72px;
     line-height: 80px;
     color: #9b9b9b;
+    color: #737373;
     padding: 20px 0 20px 25px;
 }
 header h2 span {
@@ -82,6 +84,7 @@ header h2 span {
     font-size: 21px;
     color: #7f7f7f;
     color: #647b88;
+    color: #2a343a;
     line-height: 40px;
     padding-left: 50px;
     padding-right: 50px;
@@ -91,6 +94,7 @@ header h2 span {
 
 #work {
     background-color: #dbe1e9;
+    background-color: #ebebeb;
     text-align: center;
 }
 
@@ -122,6 +126,7 @@ header h2 span {
 
 #contact {
     background-color: #ebebeb;
+    background-color: #dbe1e9;
 }
 #contact .full-width {
     padding: 110px 0;
@@ -158,6 +163,7 @@ header h2 span {
 #contact a {
     text-decoration: none;
     color: #8897AD;
+    color: #3d4550;
     font-weight: bold;
     font-size: 28px;
 }
