updated background color of work section

--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,7 @@ header h2 span {
 #work {
     background-color: #dbe1e9;
     background-color: #ebebeb;
+    background-color: #f1f3f5;
     text-align: center;
 }
 
